5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1635_2442.log
== TEST (2019-04-10 11:45:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:48:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 11:48:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


-- EXECUTION TIME:
0.214084
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:

-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:06:32) 
-- CODE:
num = int(input("digite um numero: "))
if (num % 2 == 0):
	mensagem = "par"
else 
mensagem = "impar"
print(num)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:07:01) 
-- CODE:
num = int(input("digite um numero: "))
if (num % 2 == 0):
	mensagem = "par"
else:
mensagem = "impar"
print(num)
-- ERROR:
File "XXXX", line 5
    mensagem = "impar"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:07:32) 
-- CODE:
num = int(input("digite um numero: "))
if (num % 2 == 0):
	mensagem = "par"
else:
   mensagem = "impar"
print(num)
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:07:47) 
-- CODE:
num = int(input("digite um numero: "))
if (num % 2 == 0):
	mensagem = "par"
else:
   mensagem = "impar"
print(num)
-- EXECUTION TIME:
0.168467
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
55
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
842
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:07:53) 
-- CODE:
num = int(input("digite um numero: "))
if (num % 2 == 0):
	mensagem = "par"
else:
   mensagem = "impar"
print(num)
-- EXECUTION TIME:
0.14328
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
55
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
842
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:09:08) 
-- CODE:
num = int(input("digite um numero: "))
if (num % 2 == 0):
	mensagem = "par"
else:
   mensagem = "impar"
print(num)
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:10:08) 
-- CODE:
num = int(input("digite um numero: "))
if (num % 2 == 0):
	mensagem = "par"
else:
   mensagem = "impar"
print(mensagem)
-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:10:22) 
-- CODE:
num = int(input("digite um numero: "))
if (num % 2 == 0):
	mensagem = "par"
else:
   mensagem = "impar"
print(mensagem)
-- EXECUTION TIME:
0.165777
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
